# roborally

./: .dockerignore  .gitignore  Dockerfile  README.md  belt_maze_gen.py  build-and-open.sh  build_all.fish  load-savefiles.fish
backend/: Cargo.toml
backend/maps/: Belt playground  Burn run  Chop shop challenge  Dodge this  RNG_belt  Sammy  Test  Vest
backend/roborally-frontend-wasm/: Cargo.toml
backend/roborally-frontend-wasm/src/: asset.rs  lib.rs  store.rs  utils.rs
backend/roborally-server/: Cargo.toml
backend/roborally-server/src/: game.rs  game_connection.rs  game_state.rs  main.rs  parser.rs  player.rs  rhai_api.rs
backend/roborally-structs/: Cargo.toml
backend/roborally-structs/src/: animations.rs  card.rs  game_map.rs  game_state.rs  lib.rs  logging.rs  position.rs  tile.rs  tile_type.rs  transform.rs  transport.rs  utils.rs
backend/roborally-structs/src/game_state/: animated_state.rs  mod.rs  phase.rs  player_public_state.rs
game-simulation/: Cargo.toml
game-simulation/src/: lib.rs  parser.rs  store.rs  tile.rs  utils.rs
maps/: Belt playground  Burn run  Chop shop challenge  Dodge this  Sammy  Test  Vest  test.csv
roborally-frontend/: frontend-wasm  game_simulation  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
roborally-frontend/src/: App.svelte  Collapsible.svelte  Dialog.svelte  Game.svelte  Map.svelte  Programmer.svelte  cardExamples.ts  defaultCards.ts  main.ts  utils.ts
roborally-frontend/src/lib/: Collapsible.svelte  Game.svelte  Map.svelte  Programmer.svelte  utils.ts
savefiles/: README.md
