[package]
authors = ["Matěj Volf <mat.volfik@gmail.com>"]
edition = "2018"
name = "game-simulation"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "^0.1.7"
serde = {version = "^1.0.136", features = ["derive"]}
serde-wasm-bindgen = "^0.4.2"
wasm-bindgen = {version = "^0.2.79", features = ["serde-serialize"]}
wee_alloc = "^0.4.5"

[dev-dependencies]

[profile.release]
opt-level = "s"
