[package]
authors = ["Matěj Volf <mat.volfik@gmail.com>"]
edition = "2021"
name = "roborally-server"
version = "0.1.0"

[dependencies]
futures = "^0.3.21"
http = "^0.2.6"
log = "^0.4.16"
rand = "^0.8.5"
rmp-serde = "^1.0.0"
roborally-structs = {version = "=0.1.0", path = "../roborally-structs", features = ["server"]}
serde = {version = "^1.0.136", features = ["derive"]}
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
warp = "^0.3.2"
